# zeta.nvim

./: .busted  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  bugs.md  flake.nix  todo  zeta.nvim-scm-1.rockspec
lib/: Cargo.toml
lua/zeta/: api.lua  autocmd.lua  client.lua  common.lua  editor.lua  init.lua  keymap.lua  listener.lua  log.lua  post_response.lua  prompt.lua  state.lua  utils.lua
lua/zeta/client/: init.lua  openai.lua
lua/zeta/config/: backend.lua  default.lua  init.lua
nix/: nvim-plugin-overlay.nix  test-overlay.nix
plugin/: zeta.lua
spec/: compute_edit_spec.lua  example2.rs  prompt_maker_spec.lua  test_spec.lua  testutils.lua
spec/sample/: example.rs  long_example.lua
spec/samples/: example.rs  example1.rs  long_example.lua
